@@ -1,5 +1,7 @@
 2007-04-16  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/ipython_view.py: * plugins/ipython_view.py: Enable
+	Home+Shift overwriting in the prompt.
 	* src/lib/accerciser/script_playback.py: run() now returns
 	application's PID.
 	
